--- a/src/games/puzzleGames/mouseEscape.css
+++ b/src/games/puzzleGames/mouseEscape.css
@@ -1,10 +1,22 @@
 
 /**page*/
-.MouseEscape {
+#MouseEscape, body {
   box-sizing: border-box;
+  
   height: 100vh;
   width:100%;
-  touch-action: pan-y;
+margin:0;
+padding:0;
+  
+}
+
+#MouseEscape{
+  margin-top:2rem;
+  cursor: grab;
+  touch-action: none;
+  -moz-user-select: none;
+  -webkit-user-drag: none;
+  user-select: none;
 }
 
 
