--- a/src/games/wordGames/wordsearch/wordsearch.css
+++ b/src/games/wordGames/wordsearch/wordsearch.css
@@ -6,7 +6,6 @@
   height: auto;
   width: 100%;
   column-count: 2;
-  
 }
 h1 {
   justify-self: center;
@@ -17,10 +16,9 @@ h1 {
 /** start button*/
 #start {
   display: block;
-  justify-self: center;
-  align-self: center;
-  column-span: all;
 
+ 
+ margin-left: 100%;
   width: 6rem;
   height: 4rem;
   border: 3px solid black;
@@ -38,59 +36,55 @@ h1 {
 /**words to find*/
 .listWords {
   display: block;
- column-span: all;
- flex-direction: row;
- 
+  column-span: all;
+  flex-direction: row;
 }
 
 #wordList {
-  display:flex;
+  display: flex;
   flex-wrap: wrap;
-  flex-direction:row;
+  flex-direction: row;
   list-style: none;
   column-span: all;
   justify-content: space-evenly;
   margin-left: 1em;
   margin-right: 1em;
 }
-#wList{
+#wList {
   flex-wrap: wrap;
   flex-direction: row;
- 
+
   column-span: all;
   font-size: 1.2em;
   font-weight: bold;
- padding:0.5em
+  padding: 0.5em;
 }
 
-
 /** word grid*/
-:root{
-  --grid-row:1;
-  --grid-column:1;
-
+:root {
+  --grid-row: 1;
+  --grid-column: 1;
 }
 .searchGrid {
   display: grid;
-  
+
   grid-template-columns: repeat(var(--grid-column), 2rem);
-  grid-template-rows: repeat(var(--grid-row),2rem);
+  grid-template-rows: repeat(var(--grid-row), 2rem);
   border: 2px solid black;
   width: 90vw;
   height: 70vh;
-  column-span:all;
+  column-span: all;
   margin-top: 1em;
   margin-bottom: 5em;
- 
+  margin-left: 5%;
+
   column-gap: 0.1em;
- 
 }
-.searchGrid button:first-child{
+.searchGrid button:first-child {
   grid-column: 1;
 }
-.cell-count{
- outline: 1px solid grey;
- font-weight: bolder;
- font-size: 1.5em;
+.cell-count {
+  outline: 1px solid grey;
+  font-weight: bolder;
+  font-size: 1.5em;
 }
-
