--- a/src/games/wordGames/wordsearch/wordsearch.css
+++ b/src/games/wordGames/wordsearch/wordsearch.css
@@ -1,30 +1,31 @@
 /** main body*/
 .wordsearch {
-  display: block;
-
-  margin-top: 7em;
+  display: flex;
   height: auto;
   width: 100%;
-  column-count: 2;
+  align-content: center;
+  justify-content: center;
+  align-items: center;
+  justify-items: center;
+  user-select: none;
 }
 h1 {
-  justify-self: center;
-  text-align: center;
   margin-top: 1em;
-  column-span: all;
+  align-self: center;
+  justify-self: center;
 }
 /** start button*/
 #start {
-  display: block;
-
- 
- margin-left: 100%;
+  justify-self: center;
+  align-self: center;
   width: 6rem;
   height: 4rem;
   border: 3px solid black;
   border-radius: 5px;
   background-color: rgb(192, 207, 219);
   color: black;
+  font-size: 1.5em;
+  font-weight: bold;
 }
 #start:hover {
   background-color: red;
@@ -35,9 +36,8 @@ h1 {
 
 /**words to find*/
 .listWords {
-  display: block;
-  column-span: all;
   flex-direction: row;
+  align-items: center;
 }
 
 #wordList {
@@ -45,16 +45,14 @@ h1 {
   flex-wrap: wrap;
   flex-direction: row;
   list-style: none;
-  column-span: all;
   justify-content: space-evenly;
-  margin-left: 1em;
-  margin-right: 1em;
+  margin-left: 1.5em;
+  margin-right: 1.5em;
+  text-decoration: none;
 }
 #wList {
   flex-wrap: wrap;
   flex-direction: row;
-
-  column-span: all;
   font-size: 1.2em;
   font-weight: bold;
   padding: 0.5em;
@@ -67,24 +65,62 @@ h1 {
 }
 .searchGrid {
   display: grid;
-
-  grid-template-columns: repeat(var(--grid-column), 2rem);
-  grid-template-rows: repeat(var(--grid-row), 2rem);
-  border: 2px solid black;
-  width: 90vw;
+  width: 80vw;
   height: 70vh;
-  column-span: all;
+  grid-template-columns: repeat(var(--grid-column), 3em);
+  grid-template-rows: repeat(var(--grid-row), 3em);
+  justify-items: center;
+  align-content: center;
+  justify-content: center;
+  row-gap: 0.2em;
+  column-gap: 0.5em;
+  margin: auto;
+  user-select: text;
   margin-top: 1em;
-  margin-bottom: 5em;
-  margin-left: 5%;
-
-  column-gap: 0.1em;
 }
+/** inner grid cells*/
 .searchGrid button:first-child {
   grid-column: 1;
+  height: 1.5em;
+  width: 1.5em;
+  border: 2px solid grey;
 }
 .cell-count {
-  outline: 1px solid grey;
+  text-align: center;
+  border: 2px solid grey;
   font-weight: bolder;
+  font-size: 1.8em;
+  height: 1.5em;
+  background-color: aliceblue;
+  width: 1.5em;
+}
+.cell-count:hover {
+  background-color: yellowgreen;
+}
+::selection {
+  user-select: text;
+  text-decoration: none;
+  background-color: aqua;
+}
+::moz-selection {
+  user-select: text;
+  background-color: aqua;
+}
+
+::webkit-selection {
+  user-select: text;
+  background-color: aqua;
+}
+/** timer*/
+.timer {
+  height: 3rem;
+  width: 5rem;
+  background-color: aquamarine;
+  outline: 3px solid black;
+
   font-size: 1.5em;
+  font-weight: bolder;
+  margin: auto;
+  margin-top: 0em;
+  margin-bottom: 2em;
 }
