--- a/src/pages/puzzleGamePage/puzzleGamesPage.css
+++ b/src/pages/puzzleGamePage/puzzleGamesPage.css
@@ -1,12 +1,21 @@
-.puzzles{
-  width:100%;
-  height:100%;
-  margin:0;
-  padding:0;
+.puzzles {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  text-align: center;
 }
-#block{
+#block {
   display: flex;
 }
 
-
-
+.puzzles li {
+  font-size: 1.5em;
+  background-color: aliceblue;
+  padding: 1em;
+  cursor: pointer;
+  font-weight: bolder;
+}
+.puzzles li:hover {
+  background-color: #ffc107;
+}
