--- a/src/games/puzzleGames/avoidTheHoles/avoidHoles.css
+++ b/src/games/puzzleGames/avoidTheHoles/avoidHoles.css
@@ -33,7 +33,7 @@
   justify-content: center;
   align-items: center;
   color: white;
-  border: 2px solid black;
+  border: 2px solid rgb(36, 35, 35);
   user-select: none;
 }
 
