--- a/src/pages/wordGamesPage/wordPage.css
+++ b/src/pages/wordGamesPage/wordPage.css
@@ -2,6 +2,20 @@
   
   text-align: center;
 }
+.words h1{
+  font-size: 3rem;
+  height:4rem;
+  padding:1rem;
+  color: rgb(240, 50, 50);
+  font-weight: 900;
+  text-align: center;
+  margin-top: 0.5rem;
+  justify-content: center;
+    align-content: center;
+    background-color: slategray;
+    text-shadow: 5px 10px black;
+
+}
 .words a {
   list-style-type: none;
 }
