--- a/src/games/puzzleGames/numberGuesser/numberGuesser.css
+++ b/src/games/puzzleGames/numberGuesser/numberGuesser.css
@@ -13,13 +13,13 @@
   user-select: none;
   background-color: rgb(177, 166, 166);
 }
-h1 {
+.numberGuesser h1 {
   display: inline-flex;
   font-size: 3em;
   color: rgb(202, 25, 25);
   background-color: #000;
   padding: 0.5em;
-  margin-top: 3em;
+  margin-top: 0.5em;
   width: 100%;
   text-align: center;
   justify-content: center;
@@ -34,7 +34,7 @@ h1 {
   background-color: #f2f2f2;
   border-radius: 10px;
   box-shadow: 0px 0px 15px #000;
-  margin-left: 2em;
+  margin-left: 4em;
   contain: content;
 }
 .red {
