--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -3,3 +3,15 @@
   width: 100%;
   background-color: lightsteelblue;
 }
+.home h1{
+  font-size: 3rem;
+  color: rgb(240, 50, 50);
+  font-weight: 900;
+  text-align: center;
+  margin-top: 0.5rem;
+  justify-content: center;
+    align-content: center;
+    background-color: slategray;
+    text-shadow: 5px 10px black;
+
+}
