--- a/src/games/puzzleGames/avoidTheHoles/avoidHoles.css
+++ b/src/games/puzzleGames/avoidTheHoles/avoidHoles.css
@@ -1,51 +1,72 @@
-.outerHoles {
-  margin: 1%;
-  padding: 1%;
+ .nav .toggle{
+ position: fixed;
+  z-index: 0;
+}
+
+.AvoidTheHoles {
+  width: 100%;
+  height: 100%;
+  background-color: rgb(134, 134, 134);
+  position: relative;
+  overflow: hidden;
+  justify-content: center;
+  align-items: center;
+}
+
+.outerBoard {
+  margin: auto;
+  padding: 0.1em;
   width: 90vw;
-  height: 70vh;
+  height: 95vh;
   display: flex;
   flex-direction: column;
   color: aliceblue;
-  background-color: #333332;
+
   align-items: center;
-  font-size: 2em;
-  margin-top: 6em;
+
+  margin-top: 0.5em;
   margin-bottom: 6em;
   justify-content: center;
   align-items: center;
 }
-.board {
+.innerBoard {
   display: inline-grid;
   width: 90%;
-  height: 70vh;
-  grid-template-columns: repeat(var(--size), 70px);
-  grid-template-rows: repeat(var(--size), 70px);
-
-  background-color: rgb(233, 219, 219);
-  row-gap: 1px;
-  column-gap: 1px;
-}
-
-.board > * {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: center;
+  height: 90%;
+  grid-auto-rows: 10%;
+  justify-content: space-evenly;
   align-items: center;
-  color: white;
-  border: 2px solid rgb(36, 35, 35);
-  user-select: none;
+  background-color: rgb(109, 106, 106);
+  padding: 0.1em;
 }
 
-.board > [data-status="hidden"] {
-  background-color: beige;
+.innerBoard > * {
+  width: 100%;
+  height: 95%;
+  display: flex;
+  contain: layout;
+  justify-content: space-evenly;
+  align-items:inherit;
+  color: rgb(10, 10, 10);
+  border: 2px solid rgb(184, 179, 179);
+  user-select: none;
+  margin: 0em;
+  font-size: 1.5em;
+  font-weight: bolder;
+  padding: 0em;
+
 }
-.board > [data-status="hole"] {
+
+.innerBoard > [data-status="hidden"] {
+  background-color: white;
+}
+.innerBoard > [data-status="hole"] {
   background-color: rgb(231, 25, 25);
 }
-.board > [data-status="number"] {
+/*.innerBoard > [data-status="number"] {
   background-color: antiquewhite;
-}
-.board > [data-status="marked"] {
+}*/
+.innerBoard > [data-status="marked"] {
   background-color: blue;
 }
+
